deployment.yaml
#apiVersion: apps/v1beta1
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${REPO}
  namespace: ${BRANCH}
  labels:
    k8s-app: tomcat
    name: ${REPO}
  
spec:
  replicas: 2
  template:
    metadata:
      labels: 
        k8s-app: tomcat
        name: ${REPO}
    spec:
      containers:
      - name: ${REPO}
        image: ${ORIGIN_REPO}/${BRANCH}/${REPO}:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        - name: http-metrics
          containerPort: 9151

#
        volumeMounts:
        - name: tomcat-logs
          mountPath: /usr/local/tomcat/logs
        - name: tomcat-config
          mountPath: /usr/local/tomcat/conf/server.xml
          subPath: server.xml
        - name: tomcat-config
          mountPath: /usr/local/tomcat/conf/logging.properties
          subPath: logging.properties
        - name: tomcat-config
          mountPath: /usr/local/tomcat/conf/context.xml
          subPath: context.xml
        - name: tomcat-config
          mountPath: /usr/local/tomcat/conf/tomcat-users.xml
          subPath: tomcat-users.xml

######

        livenessProbe:  
          httpGet:
            path: /healthcheck.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5

        readinessProbe:
          httpGet:
            port: 8080
            path: /healthcheck.html
          initialDelaySeconds: 30
          periodSeconds: 5

##
        resources:
          requests:
            cpu: 300m
            memory: 200Mi
          limits:
            cpu: 2
            memory: 500Mi

##
      imagePullSecrets:
      - name: ${KUBERNETES_SECRET_NAME}
      restartPolicy: Always

##
      volumes:
      - name: tomcat-logs
        hostPath:
          path: /opt/logs/tomcat/${REPO}
      - name: tomcat-config
        configMap:
          name: tomcat-config
---
apiVersion: v1
kind: Service
metadata:
  name: ${REPO}
  namespace: ${BRANCH}
  labels:
    k8s-app: tomcat
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  - port:  9151
    protocol: TCP
    targetPort: 9151
    name: http-metrics

  selector:
    name: ${REPO}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-${REPO}
  namespace: ${BRANCH}
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: yzkf2.mail.10086.cn
    http:
      paths:
      - path: /${REPO}/
        backend:
          serviceName: ${REPO}
          servicePort: 8080
